--- a/cake_eating_numerical.ipynb
+++ b/cake_eating_numerical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9bbc263f",
+   "id": "07cc9895",
    "metadata": {},
    "source": [
     "# Cake Eating: Numerical Methods"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40ff79a0",
+   "id": "6268858f",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8948818d",
+   "id": "3c772a7e",
    "metadata": {
     "hide-output": false
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "034ff69c",
+   "id": "ef45ca89",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9eabbf6f",
+   "id": "ac56b822",
    "metadata": {
     "hide-output": false
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ba26b6b",
+   "id": "6bff74a2",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e332352",
+   "id": "f305b74e",
    "metadata": {
     "hide-output": false
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5dafca3",
+   "id": "bb7caf2c",
    "metadata": {},
    "source": [
     "## Reviewing the Model\n",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf265900",
+   "id": "55c67fa8",
    "metadata": {},
    "source": [
     "## Implementation using JAX\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e4382e9",
+   "id": "87ae356e",
    "metadata": {
     "hide-output": false
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "717786fa",
+   "id": "3ea7fe8d",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the Cake Eating Problem."
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5c8729a",
+   "id": "82d1c24b",
    "metadata": {
     "hide-output": false
    },
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c7226aa",
+   "id": "18cdf259",
    "metadata": {
     "hide-output": false
    },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09ecf0b5",
+   "id": "ecd58b20",
    "metadata": {},
    "source": [
     "Now let’s define the CRRA utility function."
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80d9fe47",
+   "id": "d0b28d7a",
    "metadata": {
     "hide-output": false
    },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e85bc4c7",
+   "id": "42587176",
    "metadata": {},
    "source": [
     "### The Bellman Operator\n",
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c363241",
+   "id": "c2266a8f",
    "metadata": {
     "hide-output": false
    },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc31de9c",
+   "id": "b45b248c",
    "metadata": {},
    "source": [
     "In order to create a vectorized function using `state_action_value`, we use [jax.vmap](https://jax.readthedocs.io/en/latest/_autosummary/jax.vmap.html).\n",
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f660b999",
+   "id": "0756d11f",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "134a72e8",
+   "id": "ad974d30",
    "metadata": {
     "hide-output": false
    },
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5957b381",
+   "id": "4a57daca",
    "metadata": {},
    "source": [
     "Let’s start by creating a Cake Eating Model instance using the default parameterization."
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b80bee1e",
+   "id": "c237d6c7",
    "metadata": {
     "hide-output": false
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5143f11f",
+   "id": "64adf39e",
    "metadata": {},
    "source": [
     "Now let’s see the iteration of the value function in action.\n",
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d96c2173",
+   "id": "3a8b8803",
    "metadata": {
     "hide-output": false
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91dee72b",
+   "id": "b347b2ef",
    "metadata": {},
    "source": [
     "Let’s introduce a wrapper function called `compute_value_function`\n",
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7448c3ae",
+   "id": "95d95f88",
    "metadata": {
     "hide-output": false
    },
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fb2d46b",
+   "id": "b0350cf8",
    "metadata": {
     "hide-output": false
    },
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad1ba06f",
+   "id": "c36e57f4",
    "metadata": {
     "hide-output": false
    },
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fc9c9cc",
+   "id": "c2eba6ac",
    "metadata": {},
    "source": [
     "Next let’s compare it to the analytical solution."
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f7225d1",
+   "id": "5fd5bf36",
    "metadata": {
     "hide-output": false
    },
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3cc7871",
+   "id": "ca64ddc3",
    "metadata": {
     "hide-output": false
    },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe66e7c3",
+   "id": "3d46513e",
    "metadata": {},
    "source": [
     "### Policy Function\n",
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df06b12b",
+   "id": "72108494",
    "metadata": {
     "hide-output": false
    },
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30995c72",
+   "id": "6ac1b886",
    "metadata": {},
    "source": [
     "Now let’s pass the approximate value function and compute optimal consumption:"
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e4d0f77",
+   "id": "e52cd31c",
    "metadata": {
     "hide-output": false
    },
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e181a93f",
+   "id": "71fb12cf",
    "metadata": {},
    "source": [
     "Let’s plot this next to the true analytical solution"
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e2b6392",
+   "id": "6187b506",
    "metadata": {
     "hide-output": false
    },
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea28da15",
+   "id": "a4dde29d",
    "metadata": {},
    "source": [
     "## Numba implementation\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44943078",
+   "id": "5956615e",
    "metadata": {
     "hide-output": false
    },
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26ed8c3a",
+   "id": "3b3a70b4",
    "metadata": {
     "hide-output": false
    },
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61781fe9",
+   "id": "4a5d7337",
    "metadata": {
     "hide-output": false
    },
@@ -628,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70f0fe52",
+   "id": "079f6699",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cca7f3a8",
+   "id": "b3eb3acd",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49c14b49",
+   "id": "73705670",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2942a7af",
+   "id": "d6d1f0d8",
    "metadata": {
     "hide-output": false
    },
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77acf356",
+   "id": "a7864b62",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37fefdac",
+   "id": "1ea4cb72",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "149184a4",
+   "id": "3583120f",
    "metadata": {
     "hide-output": false
    },
@@ -770,7 +770,7 @@
   }
  ],
  "metadata": {
-  "date": 1694155319.236772,
+  "date": 1694314247.7057295,
   "filename": "cake_eating_numerical.md",
   "kernelspec": {
    "display_name": "Python",
