--- a/ifp_egm.ipynb
+++ b/ifp_egm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "71c33698",
+   "id": "150ff4bd",
    "metadata": {},
    "source": [
     "# Endogenous Grid Method"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d6f8275",
+   "id": "071e8700",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90d33d7b",
+   "id": "500cafc1",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa059726",
+   "id": "21f8f8a9",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03e62ede",
+   "id": "65c3eeda",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24888be4",
+   "id": "6a0d846a",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96b12c7a",
+   "id": "ae17631f",
    "metadata": {
     "hide-output": false
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6adca4ec",
+   "id": "306ce591",
    "metadata": {},
    "source": [
     "We use 64 bit floating point numbers for extra precision."
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c340cc41",
+   "id": "2eba3155",
    "metadata": {
     "hide-output": false
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c0bd3e7",
+   "id": "14b92579",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51373cc0",
+   "id": "475af9f4",
    "metadata": {
     "hide-output": false
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "300c6149",
+   "id": "65c644c6",
    "metadata": {},
    "source": [
     "## Solution method\n",
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47ac6886",
+   "id": "be1016c6",
    "metadata": {},
    "source": [
     "### Euler equation\n",
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9418e4fd",
+   "id": "d0f967d3",
    "metadata": {},
    "source": [
     "### JAX version\n",
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bf35c46",
+   "id": "3ba8c626",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8e13e9e",
+   "id": "876f9e35",
    "metadata": {},
    "source": [
     "Then we use `jax.jit` to compile $ K $.\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11c9da4a",
+   "id": "a0da1f01",
    "metadata": {
     "hide-output": false
    },
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15d461fb",
+   "id": "5575f42a",
    "metadata": {},
    "source": [
     "Next we define a successive approximator that repeatedly applies $ K $."
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "980e2555",
+   "id": "e49e9c2e",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db91a5cc",
+   "id": "fd5e84ce",
    "metadata": {},
    "source": [
     "### Numba version\n",
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c65c941",
+   "id": "e350fe68",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5849552c",
+   "id": "cd541405",
    "metadata": {
     "hide-output": false
    },
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ed91c7f",
+   "id": "6a24c69e",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a27d5e5c",
+   "id": "8fedc657",
    "metadata": {},
    "source": [
     "## Solutions\n",
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4558f244",
+   "id": "cdbb0fc3",
    "metadata": {},
    "source": [
     "### Outputs"
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "272c8a77",
+   "id": "d54c14c0",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec33b689",
+   "id": "bca90d50",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83bd0b90",
+   "id": "cf20cbbe",
    "metadata": {},
    "source": [
     "Here’s a first run of the JAX code."
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e0adc35",
+   "id": "08ba6174",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44fcbfea",
+   "id": "c42331d4",
    "metadata": {},
    "source": [
     "Next let’s solve the same IFP with Numba."
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73b005ce",
+   "id": "a4a7b43b",
    "metadata": {
     "hide-output": false
    },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f84aaa89",
+   "id": "f06ac5b8",
    "metadata": {},
    "source": [
     "Now let’s check the outputs in a plot to make sure they are the same."
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "458b4dbd",
+   "id": "f6360e3a",
    "metadata": {
     "hide-output": false
    },
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "414034cb",
+   "id": "8262a71b",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbb85007",
+   "id": "ae03f42f",
    "metadata": {
     "hide-output": false
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bad8f25",
+   "id": "eef2ffd4",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd2d56d6",
+   "id": "c1f42eef",
    "metadata": {
     "hide-output": false
    },
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4e98880",
+   "id": "8cb20f97",
    "metadata": {},
    "source": [
     "The JAX code is significantly faster, as expected.\n",
@@ -872,7 +872,7 @@
   }
  ],
  "metadata": {
-  "date": 1694155319.280133,
+  "date": 1694314247.7506733,
   "filename": "ifp_egm.md",
   "kernelspec": {
    "display_name": "Python",
