--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "be387929",
+   "id": "7babacfc",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "babbeb52",
+   "id": "aec1643d",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed664aab",
+   "id": "547fddd0",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fc237c2",
+   "id": "61c72b1f",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03eaa767",
+   "id": "5ea7d139",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eecf4d32",
+   "id": "eff0585c",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9d7feb8",
+   "id": "90d061c5",
    "metadata": {
     "hide-output": false
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feacf788",
+   "id": "2d52e3a5",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f804ec43",
+   "id": "9ca1acc9",
    "metadata": {
     "hide-output": false
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12465793",
+   "id": "a8e4d2fb",
    "metadata": {},
    "source": [
     "## Example 1: marginal distributions\n",
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "748ad472",
+   "id": "fd3edff3",
    "metadata": {
     "hide-output": false
    },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "217c7728",
+   "id": "b5f8e5da",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ef7f89f",
+   "id": "e05e36a4",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f542ad67",
+   "id": "043f2e03",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "491a3646",
+   "id": "a0b4b604",
    "metadata": {},
    "source": [
     "Note that we did not JIT-compile the outer loop, since\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c06e50f5",
+   "id": "718e3092",
    "metadata": {},
    "source": [
     "### Alternative implementation with `lax.scan`\n",
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b1bbdf6",
+   "id": "cf0d663c",
    "metadata": {
     "hide-output": false
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4593813b",
+   "id": "e4f97d33",
    "metadata": {},
    "source": [
     "The benefit of the `lax.scan` implementation is that we compile the whole\n",
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f69820d3",
+   "id": "1140db89",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fff5a7e",
+   "id": "7377bcb6",
    "metadata": {},
    "source": [
     "Notice that by $ t=500 $ or $ t=750 $ the densities are barely\n",
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc2315ac",
+   "id": "0b8ea158",
    "metadata": {
     "hide-output": false
    },
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "418951ed",
+   "id": "836484a5",
    "metadata": {},
    "source": [
     "## Example 2: restock frequency\n",
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26e95e0a",
+   "id": "950dfb63",
    "metadata": {
     "hide-output": false
    },
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e72e0fa",
+   "id": "95d191b2",
    "metadata": {
     "hide-output": false
    },
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da22d7a2",
+   "id": "4bdc1c8a",
    "metadata": {},
    "source": [
     "### Alternative implementation with `lax.scan`\n",
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f045fdb3",
+   "id": "5c19328e",
    "metadata": {
     "hide-output": false
    },
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c54a784",
+   "id": "e5e6df3c",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1431ef3",
+   "id": "461999b2",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +584,7 @@
   }
  ],
  "metadata": {
-  "date": 1694155319.4254217,
+  "date": 1694314247.793032,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
