--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7f848b73",
+   "id": "86c1eb1c",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11e101d1",
+   "id": "1e8dbe9e",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a337fc1",
+   "id": "92e4afca",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "117a718a",
+   "id": "83134d22",
    "metadata": {},
    "source": [
     "A monopolist faces inverse demand\n",
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a8b94ac",
+   "id": "62940abb",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b8cbd25",
+   "id": "ae30799a",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c253c3a8",
+   "id": "6dbc137c",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89d1a0e3",
+   "id": "1e18ad73",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2a61041",
+   "id": "76b6f28b",
    "metadata": {
     "hide-output": false
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "907bbea8",
+   "id": "23817f6e",
    "metadata": {},
    "source": [
     "We need the following successive approximation function."
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "669e4d13",
+   "id": "98c1997d",
    "metadata": {
     "hide-output": false
    },
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94e7c112",
+   "id": "4a326872",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84312d86",
+   "id": "57d9eeb4",
    "metadata": {
     "hide-output": false
    },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2538271",
+   "id": "38a1e304",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d231d22a",
+   "id": "67056b2a",
    "metadata": {
     "hide-output": false
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eebe1abb",
+   "id": "36b2a6bd",
    "metadata": {},
    "source": [
     "Define a function to compute the current rewards given policy $ \\sigma $."
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb26c16d",
+   "id": "5752e65a",
    "metadata": {
     "hide-output": false
    },
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e94e21fa",
+   "id": "435ca8b1",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3db9ca6",
+   "id": "1ed1be70",
    "metadata": {
     "hide-output": false
    },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cdd1e8f",
+   "id": "baf9fee5",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "901e01f2",
+   "id": "28f401e8",
    "metadata": {
     "hide-output": false
    },
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ce9ee0e",
+   "id": "78a1c3b1",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43b9e2c5",
+   "id": "f48aee1b",
    "metadata": {
     "hide-output": false
    },
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f679b2a",
+   "id": "835ce504",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6cab268",
+   "id": "ff76a53e",
    "metadata": {
     "hide-output": false
    },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be4e9837",
+   "id": "1556eef7",
    "metadata": {},
    "source": [
     "Define a function to get the value $ v_{\\sigma} $ of policy\n",
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae54dfac",
+   "id": "2d34368a",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "359dc09c",
+   "id": "693c46e8",
    "metadata": {},
    "source": [
     "Now we define the solvers, which implement VFI, HPI and OPI."
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15e05731",
+   "id": "608c77d1",
    "metadata": {
     "hide-output": false
    },
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38002741",
+   "id": "8772de89",
    "metadata": {
     "hide-output": false
    },
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "579971fd",
+   "id": "62dcd85c",
    "metadata": {
     "hide-output": false
    },
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a99328d9",
+   "id": "2272c682",
    "metadata": {
     "hide-output": false
    },
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2eb5688b",
+   "id": "ec22b1cc",
    "metadata": {
     "hide-output": false
    },
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79f22844",
+   "id": "a8bb9b8c",
    "metadata": {
     "hide-output": false
    },
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98bd883e",
+   "id": "c4d8009c",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17c25871",
+   "id": "8bf232da",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6eb0cefa",
+   "id": "1a567f00",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed9830db",
+   "id": "2dba2218",
    "metadata": {},
    "source": [
     "Let’s plot the time taken by each of the solvers and compare them."
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c34597c5",
+   "id": "df3fb73a",
    "metadata": {
     "hide-output": false
    },
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56db1fbe",
+   "id": "cff8f143",
    "metadata": {
     "hide-output": false
    },
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf15c973",
+   "id": "651e6210",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9fbafb0",
+   "id": "e9d90acc",
    "metadata": {
     "hide-output": false
    },
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f857f9b",
+   "id": "3a19b08b",
    "metadata": {
     "hide-output": false
    },
@@ -788,7 +788,7 @@
   }
  ],
  "metadata": {
-  "date": 1694155319.7310436,
+  "date": 1694314248.231062,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
