--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4483fcbd",
+   "id": "e0f5de9d",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27b30ca3",
+   "id": "cae73f5a",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bd92995",
+   "id": "7da37db0",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cd89908",
+   "id": "732a0829",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbcd019e",
+   "id": "6cb4b392",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36a05a76",
+   "id": "565a9c69",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4be66586",
+   "id": "9b42859b",
    "metadata": {},
    "source": [
     "## Newton in one dimension\n",
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a809a222",
+   "id": "c4df4706",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5421ca13",
+   "id": "20f6b272",
    "metadata": {},
    "source": [
     "The code above uses automatic differentiation to calculate $ f' $ via the call to `jax.grad`.\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80c78b2a",
+   "id": "d0a0876f",
    "metadata": {
     "hide-output": false
    },
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbb6a046",
+   "id": "30687344",
    "metadata": {},
    "source": [
     "Here we go"
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1de50ddd",
+   "id": "02465659",
    "metadata": {
     "hide-output": false
    },
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2732c4b2",
+   "id": "0f624320",
    "metadata": {},
    "source": [
     "This number looks good, given the figure."
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7219fd1f",
+   "id": "3db05b00",
    "metadata": {},
    "source": [
     "## An Equilibrium Problem\n",
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f247c92",
+   "id": "363a487d",
    "metadata": {},
    "source": [
     "### The Two Goods Market Equilibrium\n",
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d45a508",
+   "id": "8d423505",
    "metadata": {},
    "source": [
     "### A High-Dimensional Version\n",
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "281353a7",
+   "id": "f9a2c1b2",
    "metadata": {
     "hide-output": false
    },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54b1d1c0",
+   "id": "b0adff45",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7071e60",
+   "id": "a2a54ffa",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a04a11c4",
+   "id": "188cedf0",
    "metadata": {
     "hide-output": false
    },
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fb51314",
+   "id": "4d1dd1d0",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08512666",
+   "id": "51a48d26",
    "metadata": {
     "hide-output": false
    },
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28b6bdf2",
+   "id": "b2f0acbb",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0de54138",
+   "id": "95e56073",
    "metadata": {
     "hide-output": false
    },
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac3081d9",
+   "id": "556be9a7",
    "metadata": {},
    "source": [
     "By leveraging the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc6ae3ea",
+   "id": "b9e13c85",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bb2b8e4",
+   "id": "11a5e93d",
    "metadata": {
     "hide-output": false
    },
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c56c3b3",
+   "id": "96b49e22",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fd3754d",
+   "id": "eba7f44f",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3395f478",
+   "id": "a057f83f",
    "metadata": {
     "hide-output": false
    },
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f1cfec6",
+   "id": "89b5a4f1",
    "metadata": {},
    "source": [
     "The result is also less accurate."
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1e7bf65",
+   "id": "6222e656",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be97a753",
+   "id": "5b779795",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb8ccb52",
+   "id": "54dd3638",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#newton_ex1)\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "415b4087",
+   "id": "2723a434",
    "metadata": {
     "hide-output": false
    },
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28e35bca",
+   "id": "5e6ae411",
    "metadata": {},
    "source": [
     "Then define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e8d9dfa",
+   "id": "d5fb2851",
    "metadata": {
     "hide-output": false
    },
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "795bcead",
+   "id": "d6bc8e7f",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -628,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ec89738",
+   "id": "c6650c16",
    "metadata": {
     "hide-output": false
    },
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac996bbe",
+   "id": "b874e8c0",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values given the well-defined property of this question.\n",
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4394e881",
+   "id": "675d7e8c",
    "metadata": {
     "hide-output": false
    },
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07815cc8",
+   "id": "44035561",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a564b059",
+   "id": "ef9cddce",
    "metadata": {
     "hide-output": false
    },
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93056879",
+   "id": "2efc7ffe",
    "metadata": {},
    "source": [
     "The result is very close to the ground truth but still slightly different.\n",
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c33dc47",
+   "id": "5abf473c",
    "metadata": {
     "hide-output": false
    },
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33d8e767",
+   "id": "40ba0d97",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df1d6414",
+   "id": "1381678e",
    "metadata": {},
    "source": [
     "## Exercise 3.2\n",
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9a8c792",
+   "id": "934d4f96",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.2](https://jax.quantecon.org/#newton_ex2)\n",
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cb706ea",
+   "id": "dc7069bf",
    "metadata": {
     "hide-output": false
    },
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b849938",
+   "id": "83488606",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f01f91e",
+   "id": "4afcdd59",
    "metadata": {
     "hide-output": false
    },
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f631b48",
+   "id": "cb5e6fd1",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -852,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c73b5ebc",
+   "id": "a49b991a",
    "metadata": {
     "hide-output": false
    },
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa1bacdf",
+   "id": "227cd59e",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -871,7 +871,7 @@
   }
  ],
  "metadata": {
-  "date": 1694155319.696053,
+  "date": 1694314248.1942964,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
