--- a/status.ipynb
+++ b/status.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5e1688c1",
+   "id": "136e64f9",
    "metadata": {},
    "source": [
     "# Execution Statistics\n",
@@ -11,24 +11,24 @@
     "\n",
     "[](https://jax.quantecon.org/aiyagari_jax.html)[](https://jax.quantecon.org/arellano.html)[](https://jax.quantecon.org/cake_eating_numerical.html)[](https://jax.quantecon.org/ifp_egm.html)[](https://jax.quantecon.org/intro.html)[](https://jax.quantecon.org/inventory_dynamics.html)[](https://jax.quantecon.org/jax_intro.html)[](https://jax.quantecon.org/kesten_processes.html)[](https://jax.quantecon.org/markov_asset.html)[](https://jax.quantecon.org/mle.html)[](https://jax.quantecon.org/newtons_method.html)[](https://jax.quantecon.org/opt_invest.html)[](https://jax.quantecon.org/opt_savings.html)[](https://jax.quantecon.org/short_path.html)[](https://jax.quantecon.org/.html)[](https://jax.quantecon.org/troubleshooting.html)[](https://jax.quantecon.org/wealth_dynamics.html)[](https://jax.quantecon.org/zreferences.html)|Document|Modified|Method|Run Time (s)|Status|\n",
     "|:------------------:|:------------------:|:------------------:|:------------------:|:------------------:|\n",
-    "|aiyagari_jax|2023-09-08 06:00|cache|58.59|✅|\n",
-    "|arellano|2023-09-08 06:01|cache|35.0|✅|\n",
-    "|cake_eating_numerical|2023-09-08 06:01|cache|22.74|✅|\n",
-    "|ifp_egm|2023-09-08 06:03|cache|71.76|✅|\n",
-    "|intro|2023-09-08 06:03|cache|1.09|✅|\n",
-    "|inventory_dynamics|2023-09-08 06:09|cache|360.14|✅|\n",
-    "|jax_intro|2023-09-08 06:09|cache|46.6|✅|\n",
-    "|kesten_processes|2023-09-08 06:10|cache|28.65|✅|\n",
-    "|markov_asset|2023-09-08 06:10|cache|23.58|✅|\n",
-    "|mle|2023-09-08 06:11|cache|20.02|✅|\n",
-    "|newtons_method|2023-09-08 06:13|cache|168.06|✅|\n",
-    "|opt_invest|2023-09-08 06:16|cache|175.04|✅|\n",
-    "|opt_savings|2023-09-08 06:17|cache|58.65|✅|\n",
-    "|short_path|2023-09-08 06:18|cache|9.78|✅|\n",
-    "|status|2023-09-08 06:18|cache|3.96|✅|\n",
-    "|troubleshooting|2023-09-08 06:03|cache|1.09|✅|\n",
-    "|wealth_dynamics|2023-09-08 06:18|cache|33.69|✅|\n",
-    "|zreferences|2023-09-08 06:03|cache|1.09|✅|\n",
+    "|aiyagari_jax|2023-09-10 00:17|cache|58.72|✅|\n",
+    "|arellano|2023-09-10 00:18|cache|35.72|✅|\n",
+    "|cake_eating_numerical|2023-09-10 00:18|cache|22.89|✅|\n",
+    "|ifp_egm|2023-09-10 00:19|cache|72.5|✅|\n",
+    "|intro|2023-09-10 00:19|cache|1.43|✅|\n",
+    "|inventory_dynamics|2023-09-10 00:25|cache|358.16|✅|\n",
+    "|jax_intro|2023-09-10 00:26|cache|39.59|✅|\n",
+    "|kesten_processes|2023-09-10 00:26|cache|29.03|✅|\n",
+    "|markov_asset|2023-09-10 00:27|cache|23.03|✅|\n",
+    "|mle|2023-09-10 00:27|cache|19.69|✅|\n",
+    "|newtons_method|2023-09-10 00:30|cache|168.08|✅|\n",
+    "|opt_invest|2023-09-10 00:33|cache|181.51|✅|\n",
+    "|opt_savings|2023-09-10 00:34|cache|58.59|✅|\n",
+    "|short_path|2023-09-10 00:34|cache|9.84|✅|\n",
+    "|status|2023-09-10 00:34|cache|3.97|✅|\n",
+    "|troubleshooting|2023-09-10 00:19|cache|1.43|✅|\n",
+    "|wealth_dynamics|2023-09-10 00:35|cache|33.48|✅|\n",
+    "|zreferences|2023-09-10 00:19|cache|1.43|✅|\n",
     "\n",
     "<a id='status-machine-details'></a>\n",
     "These lectures are built on `linux` instances through `github actions`  and `amazon web services (aws)` to\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "883d0fe2",
+   "id": "f95b0dc8",
    "metadata": {
     "hide-output": false
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb091aa4",
+   "id": "43156d15",
    "metadata": {},
    "source": [
     "and the hardware we are running on:"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd2e389a",
+   "id": "fa64bfdc",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   }
  ],
  "metadata": {
-  "date": 1694155319.8134658,
+  "date": 1694314248.317671,
   "filename": "status.md",
   "kernelspec": {
    "display_name": "Python",
