--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e74f9e4c",
+   "id": "083bd415",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5096a69a",
+   "id": "ad97a6a3",
    "metadata": {},
    "source": [
     "# References\n",
@@ -25,7 +25,7 @@
   }
  ],
  "metadata": {
-  "date": 1694155319.8734252,
+  "date": 1694314248.378391,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
